Fixed styling overflow on matrix & global styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 html,
 body {
+  height: 100%;
+  overflow: auto;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -9,6 +11,20 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  margin-bottom: 2%;
+}
+
+canvas {
+  top: 0;
+  left: 0;
+  min-height: 100%;
+  position: absolute; 
+  opacity: 0.2; 
+  z-index: -1; 
+  filter: blur(2px);
 }
 
 * {
